Add unit test on ProductsController#findAllByCategory
