# src/main/java/com/centric/productstore/api/services/impl/ProductServiceImpl.java
@@ -34,7 +34,7 @@ public class ProductServiceImpl implements ProductService {
     }
 
     @Override
-    public ProductPage findProducts(String category, Integer limit, Integer pageNumber) {
+    public ProductPage findAllByCategory(String category, Integer limit, Integer pageNumber) {
         Pageable sortedByCreationDate =
             PageRequest.of(pageNumber, limit, Sort.by("createdAt").descending());
         Page<Product> page = productRepository.findAllByCategory(category, sortedByCreationDate);
